edit playlist added
